Working with 2nd api function, grabbing data and adding text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="days col-md 2" id="day1">temp</div>
+    <div class="days col-md 2" id="day1"></div>
     <div class="days col-md 2" id="day2">temp</div>
     <div class="days col-md 2" id="day3">temp</div>
     <div class="days col-md 2" id="day4">temp</div>
