--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   </div>
   <div class="row">
     <div class="days col-md 2" id="day1"></div>
-    <div class="days col-md 2" id="day2">temp</div>
-    <div class="days col-md 2" id="day3">temp</div>
-    <div class="days col-md 2" id="day4">temp</div>
-    <div class="days col-md 2" id="day5">temp</div>
+    <div class="days col-md 2" id="day2"></div>
+    <div class="days col-md 2" id="day3"></div>
+    <div class="days col-md 2" id="day4"></div>
+    <div class="days col-md 2" id="day5"></div>
   </div>
 
   
